--- a/src/views/layouts/layoutTienda.ejs
+++ b/src/views/layouts/layoutTienda.ejs
@@ -7,7 +7,7 @@
     <title>FunkoShop</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-    <script src="js/glide.js"></script>
+    <script src="/js/glide.js"></script>
 </body>
 
 </html>
