--- a/src/views/viewsTienda/shop.ejs
+++ b/src/views/viewsTienda/shop.ejs
@@ -1,231 +1,102 @@
-<main class="main__containershop">
-    <div class="productos__shop">
-        <section class="main__cards">
-            <div class="filtros">
-                <aside class="filter__item">
-                    <form class="form__filtro" action="" method="post">
-                        <div class="filter__search">
-                            <h3 class="filter__title">BUSCAR</h3>
-                            <input class="input__search" type="text" name="busqueda" id="busqueda"
-                                placeholder="Item o categoría" />
-                        </div>
-                        <div class="filter__order">
-                            <h3 class="filter__title">ORDENAR POR</h3>
-                            <select class="select__order" name="orden" id="orden">
-                                <option class="select__order-mayor" value="mayor"> Mayor a menor</option>
-                                <option class="select__order-menor" value="menor"> Menor a mayor</option>
-                            </select>
-                        </div>
-                        <div class="filter__price">
-                            <h3 class="filter__title">PRECIO</h3>
+<main class="main__container-shop container">
 
-                            <label class="label__filter-price" for="min">MIN</label>
-                            <input class="input__price" type="number" name="min" id="min" placeholder="0" />
+    <aside class="filter__item">
+        <div class="filtros">
+            <form class="form__filtro" action="" method="post">
 
-                            <label class="label__filter-price" for="max">MAX</label>
-                            <input class="input__price" type="number" name="max" id="max" placeholder="0" />
+                <div class="search__order">
+                    <!-- <div class="filter__search"> -->
+                    <label class="filter__title">BUSCAR</label>
+                    <input class="input__search" type="text" name="busqueda" id="busqueda"
+                        placeholder="Item o categoría" />
+                    <!-- </div> -->
 
-                        </div>
-                        <div class="filter__check">
-                            <h3 class="filter__title">FILTRAR</h3>
-                            <div class="filter__check-item">
-                                <input class="input__check" type="checkbox" name="nuevos" id="nuevos" value="1" />
-                                <label class="label__filter-check" for="nuevos">NUEVOS</label>
-                            </div>
-                            <div class="filter__check-item">
-                                <input class="input__check" type="checkbox" name="ofertas" id="ofertas" value="2" />
-                                <label class="label__filter-check" for="ofertas">OFERTAS</label>
-                            </div>
-                            <div class="filter__check-item">
-                                <input class="input__check" type="checkbox" name="edicion especial"
-                                    id="edicion especial" value="3" />
-                                <label class="label__filter-check" for="edicion especial">EDICIÓN ESPECIAL</label>
-                            </div>
-                            <div class="filter__check-item">
-                                <input class="input__check" type="checkbox" name="favoritos" id="favoritos"
-                                    value="4" />
-                                <label class="label__filter-check" for="favoritos">FAVORITOS</label>
-                            </div>
-                        </div>
-                        </>
-                </aside>
-            </div>
-            <!--starwars-->
-            <div class="carta__uno">
-                <article class="card-1">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/star-wars/trooper-1.webp"
-                            alt="Figura coleccionable de Funko Stormtrooper">
-                        <img class="card-item__img--back" src="../multimedia/star-wars/trooper-box.webp"
-                            alt="Figura coleccionable de Funko Stormtrooper Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence"> STAR WARS</h6>
-                        <h3 class="card-item__name">STORMTROOPER LIGHTSABER</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
+                    <!-- <div class="filter__order"> -->
+                    <label class="filter__title">ORDENAR POR</label>
+                    <select class="select__order" name="orden" id="orden">
+                        <option class="select__order-mayor" value="mayor"> Mayor a menor</option>
+                        <option class="select__order-menor" value="menor"> Menor a mayor</option>
+                    </select>
+                    <!-- </div> -->
+                </div>
+                <div class="filter__price">
+                    <label class="filter__title">PRECIO</label>
+                    <div class="min">
+                        <label class="label__filter-price" for="min">MIN</label>
+                        <input class="input__price" type="number" name="min" id="min" placeholder="0" />
                     </div>
-                </article>
-            </div>
-            <!--pokemon-->
-            <div class="carta__dos">
+                    <div class="max">
+                        <label class="label__filter-price" for="max">MAX</label>
+                        <input class="input__price" type="number" name="max" id="max" placeholder="0" />
+                    </div>
+                </div>
+                <div class="filter__check">
+                    <label class="filter__title">FILTRAR</label>
+                    <div class="filter__check-item">
+                        <input class="input__check" type="checkbox" name="nuevos" id="nuevos" value="1" />
+                        <label class="label__filter-check" for="nuevos">NUEVOS</label>
+                    </div>
+                    <div class="filter__check-item">
+                        <input class="input__check" type="checkbox" name="ofertas" id="ofertas" value="2" />
+                        <label class="label__filter-check" for="ofertas">OFERTAS</label>
+                    </div>
+                    <div class="filter__check-item">
+                        <input class="input__check" type="checkbox" name="edicion especial" id="edicion especial"
+                            value="3" />
+                        <label class="label__filter-check" for="edicion especial">EDICIÓN ESPECIAL</label>
+                    </div>
+                    <div class="filter__check-item">
+                        <input class="input__check" type="checkbox" name="favoritos" id="favoritos" value="4" />
+                        <label class="label__filter-check" for="favoritos">FAVORITOS</label>
+                    </div>
+                </div>
+        </div>
+    </aside>
 
-                <article class="card-2">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/pokemon/pidgeotto-1.webp"
-                            alt="Figura coleccionable de Funko Pidgeotto">
-                        <img class="card-item__img--back" src="../multimedia/pokemon/pidgeotto-box.webp"
-                            alt="Figura coleccionable de Funko Pidgeotto Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence"> POKEMON</h6>
-                        <h3 class="card-item__name">PIDGEOTTO</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <!--harrypotter-->
-            <div class="carta__tres">
-                <article class="card-3">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/harry-potter/luna-1.webp"
-                            alt="Figura coleccionable de Funko Luna Lovegood">
-                        <img class="card-item__img--back" src="../multimedia/harry-potter/luna-box.webp"
-                            alt="Figura coleccionable de Funko Luna Lovegood Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence">HARRY POTTER </h6>
-                        <h3 class="card-item__name">LUNA LOVEGOOD LION MASK</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <!--starwars-->
-            <div class="carta__cuatro">
-                <article class="card-4">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/star-wars/trooper-1.webp"
-                            alt="Figura coleccionable de Funko Stormtrooper">
-                        <img class="card-item__img--back" src="../multimedia/star-wars/trooper-box.webp"
-                            alt="Figura coleccionable de Funko Stormtrooper Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence"> STAR WARS</h6>
-                        <h3 class="card-item__name">STORMTROOPER LIGHTSABER</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <!--pokemon-->
-            <div class="carta__cinco">
-                <article class="card-5">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/pokemon/pidgeotto-1.webp"
-                            alt="Figura coleccionable de Funko Pidgeotto">
-                        <img class="card-item__img--back" src="../multimedia/pokemon/pidgeotto-box.webp"
-                            alt="Figura coleccionable de Funko Pidgeotto Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence"> POKEMON</h6>
-                        <h3 class="card-item__name">PIDGEOTTO</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <!--harrypotter-->
-            <div class="carta__seis">
-                <article class="card-6">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/harry-potter/luna-1.webp"
-                            alt="Figura coleccionable de Funko Luna Lovegood">
-                        <img class="card-item__img--back" src="../multimedia/harry-potter/luna-box.webp"
-                            alt="Figura coleccionable de Funko Luna Lovegood Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence">HARRY POTTER </h6>
-                        <h3 class="card-item__name">LUNA LOVEGOOD LION MASK</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <!--starwars-->
-            <div class="carta__siete">
-                <article class="card-7">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/star-wars/trooper-1.webp"
-                            alt="Figura coleccionable de Funko Stormtrooper">
-                        <img class="card-item__img--back" src="../multimedia/star-wars/trooper-box.webp"
-                            alt="Figura coleccionable de Funko Stormtrooper Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence"> STAR WARS</h6>
-                        <h3 class="card-item__name">STORMTROOPER LIGHTSABER</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <!--pokemon-->
-            <div class="carta__ocho">
-                <article class="card-8">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/pokemon/pidgeotto-1.webp"
-                            alt="Figura coleccionable de Funko Pidgeotto">
-                        <img class="card-item__img--back" src="../multimedia/pokemon/pidgeotto-box.webp"
-                            alt="Figura coleccionable de Funko Pidgeotto Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence"> POKEMON</h6>
-                        <h3 class="card-item__name">PIDGEOTTO</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <!--harrypotter-->
-            <div class="carta__nueve">
-                <article class="card-9">
-                    <picture class="card-item__img">
-                        <span class="card-item__tag">NUEVO</span>
-                        <img class="card-item__img--front" src="../multimedia/harry-potter/luna-1.webp"
-                            alt="Figura coleccionable de Funko Luna Lovegood">
-                        <img class="card-item__img--back" src="../multimedia/harry-potter/luna-box.webp"
-                            alt="Figura coleccionable de Funko Luna Lovegood Box">
-                    </picture>
-                    <div class="card__description">
-                        <h6 class="card-item__licence">HARRY POTTER </h6>
-                        <h3 class="card-item__name">LUNA LOVEGOOD LION MASK</h3>
-                        <p class="card-item__price">$ 1.799,99</p>
-                        <p class="card-item__cuotas">3 CUOTAS SIN INTERES</p>
-                    </div>
-                </article>
-            </div>
-            <nav id="pagination" class="pagination">
-                <ul>
-                    <li> <a href="shop.html">1</a> </li>
-                    <li> <a href="#">2</a></li>
-                    <li> <a href="#">...</a></li>
-                    <li> <a href="#">9</a> </li>
-                    <li><a href="#">10</a></li>
-                </ul>
-            </nav>
+    <section class="main__cards">
 
-        </section>
+        <%if (typeof productos !='undefined' ) { %>
 
+            <% productos.forEach(producto=> { %>
+                <article class="cards">
+                    <a href="/items/<%=producto.id%>">
+                    <picture class="card-item__img">
+                        <span class="card-item__tag">NUEVO</span>
+                        
+                            <img class="card-item__img--front" src="/upload/producto_<%= producto.id %>.webp"
+                                alt="<%=producto.product_description%>">
+                            <img class="card-item__img--back" src="/upload/producto_<%= producto.id %>.webp"
+                            alt="<%=producto.product_description%>">
+                    </picture>
+                    <div class="card__description">
+                        <h6 class="card-item__licence">
+                            <%=producto.licence_name%>
+                        </h6>
+                        <h3 class="card-item__name">
+                            <%=producto.product_name%>
+                        </h3>
+                        <p class="card-item__price">$<%=producto.price%>
+                        </p>
+                        <p class="card-item__cuotas">
+                            <%=producto.dues%> - Cuotas sin intereses.
+                        </p>
+                    </div>
+                    </a>
+                </article>
+                <% }) %>
 
+                    <% } %>
 
+    </section>
+
+    <div class="pagination">
+        <a href="#">&laquo;</a>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">6</a>
+        <a href="#">&raquo;</a>
     </div>
 </main>
