--- a/src/views/layouts/layoutTienda.ejs
+++ b/src/views/layouts/layoutTienda.ejs
@@ -15,7 +15,8 @@
     <%- body %>
     <%- include ('../partials/tienda/footerTienda') %>
     
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/item.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="/js/glide.js"></script>
