Actualización de carpetas

--- a/src/views/viewsTienda/item.ejs
+++ b/src/views/viewsTienda/item.ejs
@@ -4,8 +4,8 @@
             <picture class="card-item__img">
                 <img class="card-item__img--front" src="/upload/producto_<%= producto.id %>.webp"
                     alt="Figura coleccionable de Funko Baby Yoda">
-                <img class="card-item__img--back" src="../multimedia/star-wars/baby-yoda-box.webp"
-                    alt="Figura coleccionable de Funko Baby Yoda Box">
+                <!-- <img class="card-item__img--back" src="../multimedia/star-wars/baby-yoda-box.webp"
+                    alt="Figura coleccionable de Funko Baby Yoda Box"> -->
             </picture>
             <div class="card-item__content">
                 <p class="item-card__licence"><%=producto.licence_name%></p>
