--- a/src/views/viewsTienda/shop.ejs
+++ b/src/views/viewsTienda/shop.ejs
@@ -65,8 +65,8 @@
                         
                             <img class="card-item__img--front" src="/upload/producto_<%= producto.id %>.webp"
                                 alt="<%=producto.product_description%>">
-                            <img class="card-item__img--back" src="/upload/producto_<%= producto.id %>.webp"
-                            alt="<%=producto.product_description%>">
+                            <!-- <img class="card-item__img--back" src="/upload/producto_<%= producto.id %>.webp"
+                            alt="<%=producto.product_description%>"> -->
                     </picture>
                     <div class="card__description">
                         <h6 class="card-item__licence">
