Se agrega lógica de login y register

--- a/src/views/partials/admin/headerAdmin.ejs
+++ b/src/views/partials/admin/headerAdmin.ejs
@@ -17,7 +17,7 @@
                 <a class="navbar__link" href="/admin">Admin</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="/login">Salir</a>
+                <a class="navbar__link" href="/logout">Salir</a>
             </li>
         </ul>
     </nav>
