--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,7 +12,7 @@
             <h3 class="collection__title">STAR WARS & THE MANDALORIAN</h3>
             <p class="collection__description">Disfruta de una saga que sigue agregando personajes a su colección.
             </p>
-            <a class="collection__link" href="#">VER COLECCION</a>
+            <a class="collection__link" href="/shop">VER COLECCION</a>
         </article>
         <picture class="collection__img">
             <img src="multimedia/star-wars/baby-yoda-1.webp" alt="BABY YODA">
@@ -24,7 +24,7 @@
             <h3 class="collection__title">POKEMON INDIGO</h3>
             <p class="collection__description">Atrapa todos los que puedas y disfruta de una colección llena de
                 amigos.</p>
-            <a class="collection__link" href="#">VER COLECCION</a>
+            <a class="collection__link" href="/shop">VER COLECCION</a>
         </article>
         <picture class="collection__img">
             <img src="multimedia/pokemon/vulpix-1.webp" alt="POKEMON VULPIX">
@@ -35,7 +35,7 @@
         <article class="collection__item">
             <h3 class="collection__title">HARRY POTTER</h3>
             <p class="collection__description">Revive los recuerdos de una saga llena de magia y encantos.</p>
-            <a class="collection__link" href="pages_tienda/shop.html">VER COLECCION</a>
+            <a class="collection__link" href="/shop">VER COLECCION</a>
         </article>
         <picture class="collection__img">
             <img src="multimedia/harry-potter/snape-patronus-1.webp" alt="HARRY POTTER">
@@ -43,5 +43,8 @@
     </section>
     
     <h2 class="slider__title container">ÚLTIMOS LANZAMIENTOS</h2>
-    <%- include ('partials/tienda/slider') %>
+
+    <%- include ('./partials/tienda/slider') %>
+
+
 </main>
