--- a/src/views/partials/tienda/slider.ejs
+++ b/src/views/partials/tienda/slider.ejs
@@ -1,6 +1,43 @@
     <!-- SLIDER -->
+   
+    
     <section class="slider container glide">
         
+        
+        <!-- <div class="glide__track" data-glide-el="track">
+
+            <ul class="slider__items glide__slides">
+               
+                <li class="slider__items glide__slide">
+                    <%if (typeof productos !='undefined' ) { %>
+        
+                        <% productos.forEach(producto=> { %>
+                    <article class="card-item">
+                        
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__img">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="/upload/producto_<%= producto.id %>.webp"
+                                    alt="<%=producto.product_description%>">
+                                <img class="card-item__img--back" src="multimedia/star-wars/trooper-box.webp"
+                                    alt="Figura coleccionable de Funko Stormtrooper Box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence"><%=producto.licence_name%></p>
+                                <h4 class="card-item__name"><%=producto.product_name%></h4>
+                                <p class="card-item__price">$<%=producto.price%>
+                                <p class="card-item__cuotas"><%=producto.dues%> - CUOTAS SIN INTERES</p>
+                            </div>
+                        </a>
+                        
+                    </article>
+                    <% }) %>
+        
+                    <% } %>
+          </li>
+          </ul>
+            
+        </div> -->
         <div class="glide__track" data-glide-el="track">
             <ul class="slider__items glide__slides">
                 <li class="slider__items glide__slide">
@@ -8,7 +45,7 @@
                         <a class="card-item__link" href="">
                             <picture class="card-item__img">
                                 <span class="card-item__tag">NUEVO</span>
-                                <img class="card-item__img--front" src="multimedia/pokemon/pidgeotto-box.webp"
+                                <img class="card-item__img--front" src="/multimedia/star-wars/trooper-1.webp"
                                     alt="Figura coleccionable de Funko Stormtrooper">
                                 <img class="card-item__img--back" src="multimedia/star-wars/trooper-box.webp"
                                     alt="Figura coleccionable de Funko Stormtrooper Box">
@@ -27,7 +64,7 @@
                         <a class="card-item__link" href="">
                             <picture class="card-item__img">
                                 <span class="card-item__tag">NUEVO</span>
-                                <img class="card-item__img--front" src="multimedia/pokemon/pidgeotto-box.webp"
+                                <img class="card-item__img--front" src="/multimedia/pokemon/pidgeotto-1.webp"
                                     alt="Figura coleccionable de Funko Pidgeotto">
                                 <img class="card-item__img--back" src="multimedia/pokemon/pidgeotto-box.webp"
                                     alt="Figura coleccionable de Funko Pidgeotto Box">
@@ -46,7 +83,7 @@
                         <a class="card-item__link" href="">
                             <picture class="card-item__img">
                                 <span class="card-item__tag">NUEVO</span>
-                                <img class="card-item__img--front" src="multimedia/pokemon/pidgeotto-box.webp"
+                                <img class="card-item__img--front" src="/multimedia/harry-potter/luna-1.webp"
                                     alt="Figura coleccionable de Funko Luna Lovegood">
                                 <img class="card-item__img--back" src="multimedia/harry-potter/luna-box.webp"
                                     alt="Figura coleccionable de Funko Luna Lovegood Box">
@@ -61,6 +98,12 @@
                     </article>
                 </li>
             </ul>
+        </div>
+        <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon class="icon__slider"
+                    icon="tabler:chevron-left"></iconify-icon></button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon class="icon__slider"
+                    icon="tabler:chevron-right"></iconify-icon></button>
         </div>
         <div class="glide__arrows" data-glide-el="controls">
             <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon class="icon__slider"
