--- a/src/views/viewsTienda/shop.ejs
+++ b/src/views/viewsTienda/shop.ejs
@@ -65,21 +65,14 @@
                         
                             <img class="card-item__img--front" src="/upload/producto_<%= producto.id %>.webp"
                                 alt="<%=producto.product_description%>">
-                            <img class="card-item__img--back" src="/public/multimedia/star-wars/baby-yoda-box.webp"
+                            <img class="card-item__img--back" src="/upload/producto_<%= producto.id %>.webp"
                             alt="<%=producto.product_description%>">
                     </picture>
                     <div class="card__description">
-                        <h6 class="card-item__licence">
-                            <%=producto.licence_name%>
-                        </h6>
-                        <h3 class="card-item__name">
-                            <%=producto.product_name%>
-                        </h3>
-                        <p class="card-item__price">$<%=producto.price%>
-                        </p>
-                        <p class="card-item__cuotas">
-                            <%=producto.dues%> - Cuotas sin intereses.
-                        </p>
+                        <h6 class="card-item__licence"><%=producto.licence_name%></h6>
+                        <h3 class="card-item__name"><%=producto.product_name%></h3>
+                        <p class="card-item__price">$<%=producto.price%></p>
+                        <p class="card-item__cuotas"><%=producto.dues%> - Cuotas sin intereses. </p>
                     </div>
                     </a>
                 </article>
@@ -91,7 +84,7 @@
 
     <div class="pagination">
         <a href="#">&laquo;</a>
-        <a href="#">1</a>
+        <a href="/shop">1</a>
         <a href="#">2</a>
         <a href="#">3</a>
         <a href="#">4</a>
